@@ -7,6 +7,8 @@
 - Fixed an issue where calculated product fields hidden by conditional logic could appear in order summary when the entry is updated on the User Input step.
 - Updated the Sliced Invoices integration.
 - Added the gravityflow_step_schedule_timestamp filter to allow the scheduled start of steps to apply custom logic (business hours, delay specific entries, etc)
+- Updated discussion field to support use of view more / less on non-edit field scenarios (display only field on user input or any other step type) including status page
+- Added filter gravityflow_discussion_items_display_toggle to allow view more / less to be active or inactive per discussion field
 - Added Step ID to workflow settings list (row actions mouseover) and to sub-title of edit step screen
 - Added filter gravityflow_inbox_paging to inbox page to enable control of pagination options
 - API: Updated the way assignees are handled to allow the base assignee class to be extended so new types of assignees can be created.
